--- a/i3/config
+++ b/i3/config
@@ -1,125 +1,204 @@
-bindsym $mod+Shift+r restart
-### Tweaks ###
-# Set main key (Win)
+# Set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod4
 
-# Press MOD key and click on mouse to move your window
+# set default desktop layout (default is tiling)
+# workspace_layout tabbed <stacking|tabbed>
+
+# Configure border style <normal|1pixel|pixel xx|none|pixel>
+new_window pixel 2
+new_float normal
+
+# Hide borders
+hide_edge_borders none
+
+# Font for window titles. Will also be used by the bar unless a different font
+# is used in the bar {} block below.
+font xft:Mononoki 11
+
+# Use Mouse+$mod to drag floating windows
 floating_modifier $mod
 
-# Focus doesn't follow the mouse
-focus_follows_mouse yes
+# start a $myTerm
+set $myTerm alacritty
+bindsym $mod+Return exec $myTerm
 
-# Manage popups
-popup_during_fullscreen smart
+# kill focused window
+bindsym $mod+Shift+q kill
 
-# Fonts
-font pango: Mononoki 11
+################################################################################################
+## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
+################################################################################################
 
-# xwinwrap
-# exec xwinwrap -g 1920x1080 -ov -ni -s -nf -- gifview -w WID ~/.config/i3/gif.gif -a
+exec --no-startup-id volumeicon
+#exec --no-startup-id pulseaudio
+#exec --no-startup-id pa-applet
 
-### Main settings ###
-# Workspace names (and variables)
-set $workspace1 "1: "
-set $workspace2 "2: "
-set $workspace3 "3: "
-set $workspace4 "4: "
+################################################################################################
 
-## Rules ##
-assign [class="*|Dolphin|vifm|ranger|zathura|draw.io"] $workspace1
-assign [class="konsole|kitty|urxvt|gnome-terminal|alacritty"] $workspace1
-assign [class="Emacs|Gvim|vim|nvim|Code|marktext|Boostnote"] $workspace1
-assign [class="Google-chrome|firefox|Chromium"] $workspace2
-assign [class="TelegramDesktop"] $workspace4
+# Screen brightness controls
+# bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
+# bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
 
-## Keyboard Settings ##
-# Apps
-bindsym $mod+Return exec alacritty
-bindsym $mod+Mo Select window, open new app
+# Start Applications
+bindsym $mod+d exec rofi -show run
 
-# Rofi drun mode
-bindsym $mod+d exec "rofi -modi drun -show drun -show-icons -sort -theme ~/.config/rofi/GreatI3.rasi"
-
-bindsym $mod+p exec "scrot /home/philipp/Pictures/Screenshots/"
-
-# System / Volume
-bindsym XF86AudioMute "exec amixer -D pulse sset Master toggle && notify-send \"Volume\" \"Sound is (un)muted\" --urgency low"
-bindsym XF86AudioRaiseVolume "exec amixer -D pulse sset Master 5%+ && notify-send \"Volume\" \"Volume added +5%\n    Volume level is now $(amixer -D pulse get Master | awk -F 'Left:|[][]' 'BEGIN {RS=\"\"}{ print $3 }')\" --urgency low"
-bindsym XF86AudioLowerVolume "exec amixer -D pulse sset Master 5%- && notify-send \"Volume\" \"Volume added -5%\n    Volume level is now $(amixer -D pulse get Master | awk -F 'Left:|[][]' 'BEGIN {RS=\"\"}{ print $3 }')\" --urgency low"
-
-
-# System / Brightness
-bindsym $mod+F1 exec xbacklight -dec 20
-bindsym $mod+F2 exec xbacklight -inc 20
-
-
-# Moving from one window to another
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# Choose one of your workspaces
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
+# move focused window
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
-# Move window to the workspace
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
+# split orientation
+bindsym $mod+z split h;exec notify-send 'tile horizontally'
+bindsym $mod+v split v;exec notify-send 'tile vertically'
+bindsym $mod+q split toggle
 
-# Move windows
-bindsym $mod+Shift+h move left 20px
-bindsym $mod+Shift+j move down 20px
-bindsym $mod+Shift+k move up 20px
-bindsym $mod+Shift+l move right 20px
+# toggle fullscreen mode for the focused container
+bindsym F11 fullscreen toggle
 
-# Resizing Windows
-bindsym $mod+Ctrl+l resize shrink width 10 px or 10 ppt
-bindsym $mod+Ctrl+k resize grow height 10 px or 10 ppt
-bindsym $mod+Ctrl+j resize shrink height 10 px or 10 ppt
-bindsym $mod+Ctrl+h resize grow width 10 px or 10 ppt
+# Workspace names
+# to display names or symbols instead of plain workspace numbers you can use
+# something like: set $ws1 1:mail
+#                 set $ws2 2:
+set $ws1 1
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6 
+set $ws7 7
+set $ws8 7
 
-# Make window fullscreen
-bindcode 95 fullscreen toggle
+# switch to workspace
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
 
-# Reload Configuration
+# Move focused container to workspace
+bindsym $mod+Ctrl+1 move container to workspace $ws1
+bindsym $mod+Ctrl+2 move container to workspace $ws2
+bindsym $mod+Ctrl+3 move container to workspace $ws3
+bindsym $mod+Ctrl+4 move container to workspace $ws4
+bindsym $mod+Ctrl+5 move container to workspace $ws5
+bindsym $mod+Ctrl+6 move container to workspace $ws6
+bindsym $mod+Ctrl+7 move container to workspace $ws7
+bindsym $mod+Ctrl+8 move container to workspace $ws8
 
-# Kill a window
-bindsym $mod+q exec xdotool getwindowfocus windowkill
+# Move to workspace with focused container
+bindsym $mod+Shift+1 move container to workspace $ws1; workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2; workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3; workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4; workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5; workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6; workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
-# Floating vector
-bindsym $mod+v split t
+# Open applications on specific workspaces
+assign [class="Alacritty"] $ws1
+assign [class="Google-chrome"] $ws2
+assign [class="Pcmanfm"] $ws3
 
-# Make all windows tiling in the workspace
-bindsym $mod+i [workspace=$workspace1] floating toggle
-### Autostart ###
-exec_always --no-startup-id feh --bg-fill ~/Pictures/Wallpaper.jpg
-exec --no-startup-id setxkbmap -model pc105 -layout us,ru -option grp:win_space_toggle
-# Automount USB
-exec --no-startup-id udiskie
+# Open specific applications in floating mode
+for_window [title="alsamixer"] floating enable border pixel 1
+for_window [class="Clipgrab"] floating enable
+for_window [title="File Transfer*"] floating enable
+for_window [class="Galculator"] floating enable border pixel 1
+for_window [class="GParted"] floating enable border normal
+for_window [title="i3_help"] floating enable sticky enable border normal
+for_window [class="Lightdm-gtk-greeter-settings"] floating enable
+for_window [class="Lxappearance"] floating enable sticky enable border normal
+for_window [class="Manjaro-hello"] floating enable
+for_window [class="Manjaro Settings Manager"] floating enable border normal
+for_window [title="MuseScore: Play Panel"] floating enable
+for_window [class="Nitrogen"] floating enable sticky enable border normal
+for_window [class="Oblogout"] fullscreen enable
+for_window [class="octopi"] floating enable
+for_window [class="Pamac-manager"] floating enable
+for_window [class="Pavucontrol"] floating enable
+for_window [class="qt5ct"] floating enable sticky enable border normal
+for_window [class="Qtconfig-qt4"] floating enable sticky enable border normal
+for_window [class="Simple-scan"] floating enable border normal
+for_window [class="(?i)System-config-printer.py"] floating enable border normal
+for_window [class="Thus"] floating enable border normal
+for_window [class="Timeset-gui"] floating enable border normal
+for_window [class="(?i)virtualbox"] floating enable border normal
+for_window [class="(?i)virtualbox"] fullscreen enable 
+for_window [class="Xfburn"] floating enable
+
+# switch to workspace with urgent window automatically
+for_window [urgent=latest] focus
+
+# reload the configuration file
+bindsym $mod+Ctrl+r reload
+
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+
+# exit i3 (logs you out of your X session)
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+# Set shut down, restart and locking features
+bindsym $mod+0 mode "$mode_system"
+set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+
+# Autostart applications
+exec_always "setxkbmap -model pc105 -layout us,ru -option grp:alt_shift_toggle"
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-# Cursor
-### i3-gaps ###
-# Borders for windows
-for_window [class=".*"] border pixel 5
+exec_always --no-startup-id compton
+exec_always --no-startup-id feh --bg-scale /home/philipp/Pictures/Wallpaper.jpg
+exec --no-startup-id nm-applet
+exec --no-startup-id xfce4-power-manager
 
-# Gaps for i3bar
-for_window [class="i3bar"] gaps outer current set 10
+# Color palette used for the terminal ( ~/.Xresources file )
+# Colors are gathered based on the documentation:
+# https://i3wm.org/docs/userguide.html#xresources
+# Change the variable name at the place you want to match the color
+# of your terminal like this:
+# [example]
+# If you want your bar to have the same background color as your 
+# terminal background change the line 362 from:
+# background #14191D
+# to:
+# background $term_background
+# Same logic applied to everything else.
+set_from_resource $term_background background
+set_from_resource $term_foreground foreground
+set_from_resource $term_color0     color0
+set_from_resource $term_color1     color1
+set_from_resource $term_color2     color2
+set_from_resource $term_color3     color3
+set_from_resource $term_color4     color4
+set_from_resource $term_color5     color5
+set_from_resource $term_color6     color6
+set_from_resource $term_color7     color7
+set_from_resource $term_color8     color8
+set_from_resource $term_color9     color9
+set_from_resource $term_color10    color10
+set_from_resource $term_color11    color11
+set_from_resource $term_color12    color12
+set_from_resource $term_color13    color13
+set_from_resource $term_color14    color14
+set_from_resource $term_color15    color15
 
-# Gaps
-gaps inner 10
-gaps outer 4
+# Theme colors
+# class                   border  backgr. text    indic.   child_border
+  client.focused          #556064 #556064 #80FFF9 #FDF6E3
+  client.focused_inactive #2F3D44 #2F3D44 #AD69AF #454948
+  client.unfocused        #2F3D44 #2F3D44 #AD69AF #454948
+  client.urgent           #CB4B16 #FDF6E3 #AD69AF #268BD2
+  client.placeholder      #000000 #0c0c0c #ffffff #000000 
 
+  client.background       #2B2C2B
 
-### Topbar and color theme ###
-# Color theme of borders
-client.focused          #9257AE #556064 #80FFF9 #FDF6E3
-client.focused_inactive #2F3D44 #2F3D44 #AD69AF #454948
-client.unfocused        #2F3D44 #2F3D44 #AD69AF #454948
-client.urgent           #CB4B16 #FDF6E3 #AD69AF #268BD2
-client.placeholder      #000000 #0c0c0c #ffffff #000000 
-client.background       #2B2C2B
+bindsym --release $mod+p exec scrot 'screenshot_%Y%m%d_%H%M%S.png' -e 'mkdir -p ~/Pictures/screenshots && mv $f ~/Pictures/screenshots && xclip -selection clipboard -t image/png -i ~/Pictures/screenshots/`ls -1 -t ~/Pictures/screenshots | head -1`' # All screens
